deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - osinachi.nwagboso.com
      secretName: portfolio-app-tls
  rules:
    - host: osinachi.nwagboso.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 3000
